# FactoryMethod-Facade

./: .gitignore
Facade/Presentation/: Facade.pptx  FactoryMethod.pptx
Facade/Projects/CatTube/: CMakeLists.txt
Facade/Projects/CatTube/src/: CatTubeAccount.cpp  CatTubeAccount.h  VideoConverter.cpp  VideoConverter.h  main.cpp
Facade/Projects/CatTube/src/VideoFramework/: BitrateReader.cpp  BitrateReader.h  Codec.cpp  Codec.h  VideoFile.cpp  VideoFile.h
FactoryMethod/Presentation/: FactoryMethod.pptx
FactoryMethod/Projects/Logistics/: CMakeLists.txt
FactoryMethod/Projects/Logistics/src/: Cargo.cpp  Cargo.h  Destination.cpp  Destination.h  Logistics.cpp  Logistics.h  Pool.h  RoadLogistics.cpp  RoadLogistics.h  SeaLogistics.cpp  SeaLogistics.h  Ship.h  Transport.cpp  Transport.h  TransportPool.h  Truck.cpp  Truck.h  main.cpp
FactoryMethod/Projects/Logistics/src/benchmark/: Benchmarker.cpp  Benchmarker.h
FactoryMethod/Projects/Logistics/src/logistic/: Logistics.h  RoadLogistics.cpp  RoadLogistics.h  SeaLogistics.cpp  SeaLogistics.h
FactoryMethod/Projects/Logistics/src/storage/: Storage.h  TransportPool.h  TransportStorage.h
FactoryMethod/Projects/Logistics/src/transport/: Ship.cpp  Ship.h  Transport.h  Truck.cpp  Truck.h
FactoryMethod/Review/: FmPresentationReview.md  LogisticAppReview.md
Review/: CatTubeAppReview.md  LogisticAppReview.md  PresentationsReview.md
